[project]
name = "fusionbrain-agi"
version = "1.0.0"
description = "Neuro-Symbolic AGI with Quantum Simulation & Meta-Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    "duckduckgo-search>=5.0.0",
    "chromadb>=0.4.0",
    "numpy",
    "requests",
    "flask",
    "sqlalchemy",
    "wtforms",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
    "wikipedia>=1.4.0",
    "streamlit>=1.54.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fusionbrain"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = ["E501", "E402", "B007", "SIM102", "F841", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
]
